# python-interface

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: dataset_analyzer_ui.py  flaskcontroller.py  nicegui_controller.py  nicegui_controller_blobdetect.py  nicegui_controller_sim.py  robot_operator.py  video_analyzer_ui.py
app/templates/: index.html
arm/: example_record_sim.py  replay.py  roarm_m1.py  roarm_m1_record_replay.ipynb  roarm_m1_simtest.py  robot_sim_mirror.py  robot_sim_mirror_reverse.py  robot_test_torqueset.py  test_path.npz
data/Original_YOLOv5s/: export_info.yaml
data/SSDMobilenet_Torchvision/: export_info.yaml
docs/: examples.md  setup_jetson.md
examples/: dataset_analyzer_ui.py  dataset_analyzer_ui_opencv.py  jetson_csi_cam.py  jetson_gst_cam_native.py  manual_video_record.py  nicegui_controller.py  pickup_path.npz  roarm_path_recorder.py  robotarm_communication_test.ipynb  threaded_video_record.py  video_analyzer_ui_onnx.py  video_server_opencv.py  video_trash_detector_inference.py  vlc.sdp  vrep_sim_detector.py
install/: install_autostart.sh
scripts/: beachbot_get_jetpack_version  beachbot_get_startup_info  beachbot_setup_io_jetson  start_beachbot.sh  startup.sh
src/beachbot/: __init__.py  config.py
src/beachbot/ai/: __init__.py  blobdetectoropencv.py  dataset.py  debrisdetector.py  mediapipe_mobilenet.py  ssd_mobilenet_torchvision.py  yolov5_detector.py  yolov5_onnx.py  yolov5_opencv.py  yolov5_torch_hub.py
src/beachbot/control/: __init__.py  approachdebris.py  robotcontroller.py
src/beachbot/manipulators/: __init__.py  drive.py  jetsonmotor.py  motor.py  roarmm1.py  vrepmotorsim.py  vreproarmm1sim.py
src/beachbot/robot/: __init__.py  jetsonrobotv1.py  robotinterface.py  vreprobotsimv1.py
src/beachbot/sensors/: __init__.py  jetsoncsicameraopencv.py  jetsongstcameranative.py  usbcameraopencv.py  vrepcamerasim.py
src/beachbot/utils/: __init__.py  controllercollection.py  github.py  imageviewerjetson.py  imageviewermatplotlib.py  timer.py  videoserveropencv.py  videowriteropencv.py  vrepsimulation.py
tests/: config_test.py  dataset_analyzer_ui_onnx.py  flaskcontroller.py  github_test.py  ikin_test.ipynb  opencv_usb_cam.py  pid_controller.py  roarm_bottle_pick_up.py  sim_blobdetect.py  toss_path.npz  video_analyzer_ui_opencv.py  video_record_opencv.py
tests/templates/: index.html
