[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "beachbot"
dynamic = ["version"]
authors = [
    { name = "Jeffrey Queisser"},
    { name = "Christopher Buckley"}
]
description = "Beachbot Template"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
license = { text = "TBD" }
# dependencies = [
#     "numpy",
#     "pyserial",
#     "scipy",
#     "opencv-python",
#     "pyyaml",
#     "onnxruntime",
#     "matplotlib",
#     "fastapi",
#     "nicegui[highcharts]",
#     "torch",
#     "torchvision",
#     "pydbus"
# ]
dependencies = [
    "flask>=3.0.3",
    "pydbus>=0.6.0"
]
requires-python = ">=3.8.1"

[project.urls]
Source = "https://github.com/okinawa-ai-beach-robot/python-interface"
Issues = "https://github.com/okinawa-ai-beach-robot/python-interface/issues"

[tool.hatch.build.targets.sdist]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v*.*.*"
fallback-version= "0.0.0"
#path = "src/beachbot/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
